src/app/snapshots/friring__app__acceptance__help_overlay_lists_keybindings.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 friring  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                   ╭ Keybindings ─────────────────────────────────────────────╮                   │
│                   │Navigation                                               ▲│                   │
│                   │› ctrl+h          Focus previous pane                    █│                   │
│                   │  ctrl+l          Focus next pane                        █│                   │
│                   │  ctrl+j / alt+j  Next session                           █│                   │
│                   │  ctrl+k / alt+k  Previous session                       ║│                   │
│                   │  alt+n           Next loaded session                    ║│                   │
│                   │  alt+p           Previous loaded session                ║│                   │
│                   │  f10             Next blocked session                   ║│                   │
│                   │  ctrl+6 / ctrl+^ Last session (toggle)                  ║│                   │
│                   │  alt+a           Jump to blocked by number              ║│                   │
│                   │                                                         ║│                   │
│                   │Sessions                                                 ║│                   │
│                   │  ctrl+n          New session                            ║│                   │
│                   │  ctrl+d          Delete session                         ║│                   │
│                   │  ctrl+r          Restart session                        ║│                   │
│                   │  alt+u           Unload session (ghost)                 ║│                   │
│                   │  ctrl+f          Fork session                           ║│                   │
│                   │  ctrl+p          Automations                            ▼│                   │
│                   │j/k move · r rebind · d reset           Reset all   Close │                   │
╰───────────────────╰──────────────────────────────────────────────────────────╯                   │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  0 session(s)  Help F1   Info F2   Files F3   Theme F4   Tasks F5   Settings F6   Quit ^Q
