src/app/snapshots/friring__app__acceptance__theme_picker_lists_palettes.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 friring  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                   ╭ Theme ───────────────────────────────────────────────────╮                   │
│                   │▸ Default                   Accent      █████ █████       │                   │
│                   │  Catppuccin Mocha          Status      ◐ ◆ ● ○ ✗         │                   │
│                   │  Tokyo Night               Border      ╭─────╮           │                   │
│                   │  Gruvbox Dark              Modal bg                      │                   │
│                   │  Doom                                                    │                   │
│                   │  Nord                                                    │                   │
│                   │  Dracula                                                 │                   │
│                   │  One Dark                                                │                   │
│                   │  Rosé Pine Moon                                          │                   │
│                   │  Everforest                                              │                   │
│                   │  Kanagawa                                                │                   │
│                   │  Catppuccin Latte (light)                                │                   │
│                   │  Tokyo Night Day (light)                                 │                   │
│                   │  Gruvbox Light (light)                                   │                   │
│                   │  Solarized Light (light)                                 │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │  theme id: default                                       │                   │
│                   │j/k navigate                              Select   Cancel │                   │
╰───────────────────╰──────────────────────────────────────────────────────────╯                   │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1 s Info · F2 c Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
